--- a/css/styles.css
+++ b/css/styles.css
@@ -203,14 +203,15 @@ body {
 }
 
 .mobile-menu {
-    display: none;
+    max-height: 0;
+    overflow: hidden;
     opacity: 0;
-    transform: translateY(-10px);
-    transition: all 0.3s ease;
+    transform: translateY(-1rem);
+    transition: max-height 0.3s ease-out, opacity 0.3s ease-out, transform 0.3s ease-out;
 }
 
 .mobile-menu.active {
-    display: block;
+    max-height: 400px; /* A value larger than the menu's expected height */
     opacity: 1;
     transform: translateY(0);
 }
@@ -351,4 +352,8 @@ textarea:focus-visible {
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
+}
+
+#typed-text {
+    -webkit-backface-visibility: hidden;
 }
